--- a/frontend/src/component/DashboardSidebar/DashboardSidebar.scss
+++ b/frontend/src/component/DashboardSidebar/DashboardSidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
+  width: 200px;
   display: flex;
-  flex: 1;
+  height: 90vh;
   background: linear-gradient(
     to left,
     #52216e 0%,
