--- a/frontend/src/component/DashboardHeader/DashboardHeader.scss
+++ b/frontend/src/component/DashboardHeader/DashboardHeader.scss
@@ -1,6 +1,7 @@
 .dashboardHeader {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px 10px;
   width: 100%;
   background: linear-gradient(
