--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,8 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+@import "./responsive.scss";
+
 
 .app {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+
+  
+.container {
+  display: flex;
+  height: 100%;
+
+}
+
+.menuContainer {
+  width: 200px;
+  @include sm{
+    width: 0px;
+  }
+
+  @include md{
+    width: 0px;
+  }
+}
+
+.contentContainer {
+  padding: 15px 20px;
+  width: 100%;
+}
+
 }
