--- a/frontend/src/component/DashBoardCard/DashBoardCard.scss
+++ b/frontend/src/component/DashBoardCard/DashBoardCard.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .dashBoardCard {
   background-color: #fff;
   border: 1px solid #e0e0e0;
@@ -5,20 +7,30 @@
   box-shadow: 0 0 10px rgb(0 0 0 / 10%);
   display: flex;
   flex-direction: column;
-  // margin: 0px 20px 20px 0px;
-  margin: 0 auto;
   padding: 20px;
   transition: all 0.4s ease-in-out;
   width: 300px;
   height: 300px;
-  @media (max-width: 420px) {
-    width: 250px;
-    height: 250px;
-    margin-bottom: 20px;
-  }
   &:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.07);
+  }
+
+  @include xl{
+    width: 250px;
+    height: 250px;   
+  }
+
+  @include md{
+    width: 230px;
+    height: 230px;
+  }
+
+
+  @include sm{
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
   }
 
   .course-card__image {
@@ -37,8 +49,12 @@
       margin-bottom: 5px;
       text-align: center;
 
-      @media (min-width: 420px) {
+      @include md{
         font-size: 20px;
+      }
+
+      @include sm{
+        font-size: 12px;
       }
     }
   }
@@ -59,8 +75,12 @@
       font-weight: 500;
       width: 100%;
 
-      @media (max-width: 420px) {
+      @include md{
         font-size: 16px;
+      }
+
+      @include sm{
+        font-size: 12px;
         padding: 5px 10px;
       }
 
