--- a/frontend/src/component/DashBoardCards/DashBoardCards.scss
+++ b/frontend/src/component/DashBoardCards/DashBoardCards.scss
@@ -1,27 +1,51 @@
+@import "../../responsive.scss";
+
 .dashBoardCards {
-  padding: 15px;
   display: grid;
   gap: 1rem;
   z-index: 1;
+  overflow: hidden;
 
-  @media (min-width: 1440px) {
-   grid-template-columns: repeat(4, 1fr);
+ 
+  @include xxxl{
+    grid-template-columns: repeat(4,1fr);
+  } 
+
+  @include xxl{
+    grid-template-columns: repeat(3,1fr);
   }
 
-  @media (max-width: 1439px) {
-    grid-template-columns: repeat(3, 1fr);
-   }
+  @include lg{
+    grid-template-columns: repeat(3,1fr);
+  }
 
-   @media (max-width: 1100px) {
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-evenly;
-   }
+  @include md{
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+  }
 
-   @media (max-width: 740px) {
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: space-evenly;
-   }
+  // @media (max-width:768){
+  //   grid-template-columns: repeat(2,1fr);
+
+  // }
+
+  @media screen and (max-width: 920px) {
+    grid-template-columns: repeat(3,1fr);
+  }
 
 
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(3,1fr);
+  }
 
+  @media screen and (max-width: 540px) {
+    grid-template-columns: repeat(2,1fr);
+  }
+
+
+  @include sm{
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+  }
+  
 }
